[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/pig.png" type="Texture2D" id=1]
[ext_resource path="res://assets/sfx/bat-hit.ogg" type="AudioStream" id=2]
[ext_resource path="res://scenes/pig.gd" type="Script" id=3]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform bool flash = false;

void fragment() {
	vec4 c = texture(TEXTURE, UV);
	if (flash) {
		vec4 c_flash = vec4(1.0, 1.0, 1.0, c.a); // red
		COLOR = c_flash;
	} else {
		COLOR = c;
	}
}"

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = SubResource( 7 )
shader_param/flash = false

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "float"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "flash"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Pig" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource( 8 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -1.3148 )
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
anims/RESET = SubResource( 9 )
anims/float = SubResource( 10 )

[node name="HitFlash" type="AnimationPlayer" parent="Sprite2D"]
playback_speed = 3.0
anims/RESET = SubResource( 11 )
anims/flash = SubResource( 12 )

[node name="HitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="animation_finished" from="Sprite2D/HitFlash" to="." method="_on_HitFlash_animation_finished"]
[connection signal="finished" from="HitSfx" to="." method="_on_HitSfx_finished"]
